--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
-<iframe
- src="https://udify.app/chatbot/EkzRgAtY1tTACIxS"
- style="width: 100%; height: 100%; min-height: 700px"
- frameborder="0"
- allow="microphone">
-</iframe>
+<script>
+ window.difyChatbotConfig = {
+  token: 'FOTYNmq0Wr0XFVM3',
+  systemVariables: {
+    // user_id: 'YOU CAN DEFINE USER ID HERE',
+    // conversation_id: 'YOU CAN DEFINE CONVERSATION ID HERE, IT MUST BE A VALID UUID',
+  },
+ }
+</script>
+<script
+ src="https://udify.app/embed.min.js"
+ id="FOTYNmq0Wr0XFVM3"
+ defer>
+</script>
+<style>
+  #dify-chatbot-bubble-button {
+    background-color: #1C64F2 !important;
+  }
+  #dify-chatbot-bubble-window {
+    width: 24rem !important;
+    height: 40rem !important;
+  }
+</style>
